<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.10</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.kerneldc</groupId>
	<artifactId>iot-be</artifactId>
	<version>3.2.0-SNAPSHOT</version>
	<name>iot-be</name>
	<description>IOT Managmenet</description>

	<properties>
		<java.version>25</java.version>
		<repo-url>http://localhost:8081</repo-url>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<timestamp>${maven.build.timestamp}</timestamp>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.2</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
			<version>0.11.2</version>
			<scope>runtime</scope>
		</dependency>

		<!-- spring-integration-mqtt uses org.eclipse.paho mqtt client -->
		<dependency>
		    <groupId>org.springframework.integration</groupId>
		    <artifactId>spring-integration-mqtt</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.paho</groupId>
		    <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
		    <version>1.2.5</version> <!-- or latest -->
		</dependency>
		
		<dependency>
		     <groupId>org.springframework.boot</groupId>
		     <artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>		

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>
		
<!--		<dependency>-->
<!--			<groupId>com.github.java-json-tools</groupId>-->
<!--			<artifactId>json-patch</artifactId>-->
<!--			<version>1.13</version>-->
<!--		</dependency>-->
<!--<dependency>-->
<!--    <groupId>org.javers</groupId>-->
<!--    <artifactId>javers-spring-boot-starter-sql</artifactId>-->
<!--    <version>7.10.0</version>-->
<!--</dependency>-->
<dependency>
    <groupId>org.javers</groupId>
    <artifactId>javers-core</artifactId>
    <version>7.10.0</version>
</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
		</dependency>
    
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<!-- needed for LOADER_PATH env variable to work -->
					<layout>ZIP</layout>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<!-- Load only when Maven dev profile is active -->
			<!-- To set, right mouse click project Maven -> Select Maven profiles ... -->
			<id>dev</id>
			<dependencies>
				<dependency>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-devtools</artifactId>
					<scope>runtime</scope>
					<optional>true</optional>
				</dependency>
				<!-- for testing static pages with web sockets & stomp, app.js -->
				<!-- begin -->
				<dependency>
				  <groupId>org.webjars</groupId>
				  <artifactId>webjars-locator-core</artifactId>
				</dependency>
				<dependency>
				  <groupId>org.webjars</groupId>
				  <artifactId>sockjs-client</artifactId>
				  <version>1.0.2</version>
				</dependency>
				<dependency>
				  <groupId>org.webjars</groupId>
				  <artifactId>stomp-websocket</artifactId>
				  <version>2.3.3</version>
				</dependency>
				<dependency>
				  <groupId>org.webjars</groupId>
				  <artifactId>bootstrap</artifactId>
				  <version>3.3.7</version>
				</dependency>
				<dependency>
				  <groupId>org.webjars</groupId>
				  <artifactId>jquery</artifactId>
				  <version>3.1.1-1</version>
				</dependency>
				<!-- begin -->

			</dependencies>
		</profile>
	</profiles>

	<distributionManagement>

		<snapshotRepository>
			<id>kerneldc-nexus</id>
			<url>${repo-url}/repository/maven-snapshots</url>
		</snapshotRepository>
		<repository>
			<id>kerneldc-nexus</id>
			<name>Releases</name>
			<url>${repo-url}/repository/maven-releases</url>
		</repository>

	</distributionManagement>

	<scm>
		<url>scm:git:https://github.com/thalabi/iot-be</url>
		<connection>scm:git:https://github.com/thalabi/iot-be</connection>
		<developerConnection>scm:git:https://github.com/thalabi/iot-be</developerConnection>
	  	<tag>HEAD</tag>
	</scm>
	
</project>
